# Build-Microsoft-SEAL

./: CMakeLists.txt  README.md  tests-build.cpp
Project_Build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DecisionTreeSEAL.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tests-build.vcxproj  tests-build.vcxproj.filters
SEAL_Build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SEAL.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  seal.vcxproj  seal.vcxproj.filters
SEAL_Build/cmake/: SEALTargets.cmake
SEAL_Build/dotnet/: SEALNet.sln
SEAL_Build/dotnet/examples/: SEALNetExamples.csproj
SEAL_Build/dotnet/nuget/: SEALNet-multi.nuspec  SEALNet.nuspec
SEAL_Build/dotnet/src/: SEALNet.csproj
SEAL_Build/dotnet/tests/: SEALNetTest.csproj
SEAL_Build/lib/Release/: zlibstatic.lib  zstd_static.lib
SEAL_Build/native/src/seal/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
SEAL_Build/native/src/seal/util/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  config.h
SEAL_Build/seal.dir/Release/seal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
SEAL_Build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
SEAL_Build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
SEAL_Build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
(+4 files in other folders)
