cmake_minimum_required(VERSION 3.12)
project(DecisionTreeSEAL LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)

# Tìm thư viện SEAL đã được cài đặt (Find_package hoạt động nhờ bước INSTALL ở Pha 2)
find_package(SEAL REQUIRED)

# Thêm file thực thi
add_executable(tests-build tests-build.cpp)

# Liên kết file thực thi với thư viện SEAL
target_link_libraries(tests-build SEAL::seal)